--- a/web/templates/entry_forms/communication.html
+++ b/web/templates/entry_forms/communication.html
@@ -105,12 +105,19 @@
     <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 2rem;">
         <div>
             <h2>Communication Entry</h2>
-            <p style="color: #718096;">
-                <span class="type-badge" style="background-color: {{ client_type['color'] }}">
-                    {{ client_type['name'] }}
-                </span>
-                {{ client['first_name'] }} {{ client['last_name'] }} - File #{{ client['file_number'] }}
-            </p>
+            <div style="color: #718096;">
+                <div style="margin-bottom: 0.25rem;">
+                    <span class="type-badge" style="background-color: {{ client_type['color'] }}">
+                        {{ client_type['name'] }}
+                    </span>
+                </div>
+                <div style="margin-bottom: 0.25rem;">
+                    {{ client['first_name'] }} {{ client['middle_name'] }} {{ client['last_name'] }}
+                </div>
+                <div>
+                    File #{{ client['file_number'] }}
+                </div>
+            </div>
         </div>
     </div>
     
